cabal-version:      3.6
name:               lucid-htmx
version:            0.1.0.7
synopsis:           Use htmx in your lucid templates
description:
  Please see the README on GitHub at <https://github.com/monadicsystems/lucid-htmx#readme>

category:           Web, HTML
homepage:           https://github.com/monadicsystems/lucid-htmx#readme
bug-reports:        https://github.com/monadicsystems/lucid-htmx/issues
author:             Monadic Systems LLC
maintainer:         tech@monadic.systems
copyright:          2022 Monadic Systems LLC
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/monadicsystems/lucid-htmx

common def-exts
  default-extensions:
    LambdaCase
    OverloadedStrings

library
  import:           def-exts

  -- cabal-fmt: expand src
  exposed-modules:
    Lucid.Htmx
    Lucid.Htmx.Core
    Lucid.Htmx.Event
    Lucid.Htmx.Extension
    Lucid.Htmx.Extension.IncludeVals
    Lucid.Htmx.Extra
    Lucid.Htmx.Head
    Lucid.Htmx.Render
    Lucid.Htmx.Servant

  other-modules:    Paths_lucid_htmx
  hs-source-dirs:   src
  build-depends:
    , base     >=4.7      && <5
    , lucid    >=2.9.12.1 && <2.11.20230408.0
    , servant  >=0.19     && <0.30
    , text     >=2        && <3

  default-language: Haskell2010

test-suite lucid-htmx-test
  import:           def-exts
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Paths_lucid_htmx
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base        >=4.7      && <5
    , lucid       >=2.9.12.1 && <2.11.20230408.0
    , lucid-htmx
    , servant
    , text

  default-language: Haskell2010
